# c3po

./: .clang-format  .gitignore  .gitignore~  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  aabb.cpp  aabb.h  aggregate.cpp  aggregate.h  box.cpp  box.h  bvh.cpp  bvh.h  c3p0.cpp  c3po.cpp  camera.cpp  camera.h  geometry.cpp  geometry.h  hitable.cpp  hitable.h  interaction.cpp  interaction.h  loader.cpp  loader.h  main.cpp  material.cpp  material.h  perlin.cpp  perlin.h  primitive.cpp  primitive.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  sphere.cpp  sphere.h  texture.cpp  texture.h  transform.cpp  transform.h  transformation.cpp  transformation.h  (+2 more)
toytracer/: aabb.h  aggregate.h  box.h  bvh.h  camera.h  geometry.h  hitable.h  main.cpp  material.h  perlin.h  rectangle.h  sphere.h  texture.h  toytracer.cpp  transformation.h  utility.h
toytracer.xcodeproj/: project.pbxproj
toytracer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
toytracer.xcodeproj/xcuserdata/adamfish.xcuserdatad/xcschemes/: xcschememanagement.plist
